{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 529,
  "lineage": "f20cadbb-2003-3a41-2eb1-d96f86d8c8fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e670f235a47b08e8",
            "association_id": "eipassoc-067700a983ef768fe",
            "domain": "vpc",
            "id": "eipalloc-0e670f235a47b08e8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06f695d1b04767a3e",
            "private_dns": "ip-10-0-2-210.ec2.internal",
            "private_ip": "10.0.2.210",
            "public_dns": "ec2-54-242-98-87.compute-1.amazonaws.com",
            "public_ip": "54.242.98.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-nat-eip",
              "Path": "terraform/ntg.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-nat-eip",
              "Path": "terraform/ntg.tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-0c90c72bd61ab7e03",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c90c72bd61ab7e03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0919b801b35a03582",
            "private_dns": "ip-10-0-0-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0643db2a0434adcff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073cbfb0773ddd651",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-private-1",
              "Path": "terraform/ec2-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-private-1",
              "Path": "terraform/ec2-private.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037af11aefc0fb1fa"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.private",
            "aws_subnet.private-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_backend",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-0f6ee4c5ce8bcde4c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6ee4c5ce8bcde4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06bac1bf97af27a90",
            "private_dns": "ip-10-0-0-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b582bb37e9edf1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073cbfb0773ddd651",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-private-2",
              "Path": "terraform/ec2-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-private-2",
              "Path": "terraform/ec2-private.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037af11aefc0fb1fa"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.private",
            "aws_subnet.private-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_backend",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-0a68b031143026f26",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a68b031143026f26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062cb72b7f96a182e",
            "private_dns": "ip-10-0-2-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.217",
            "public_ip": "3.85.167.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4ee444b66a9bc24",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c982b19bbe55b2f3",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-public-1",
              "Path": "terraform/ec2-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-public-1",
              "Path": "terraform/ec2-public.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085255ecb032b9374"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.alb-public-sg",
            "aws_security_group.public",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_fronted",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:831187637319:instance/i-09bbfd33ea83d1b60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bbfd33ea83d1b60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "generated_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0297cb86392fc9654",
            "private_dns": "ip-10-0-2-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "public_ip": "3.80.46.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02843e13aa87b12d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c982b19bbe55b2f3",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-public-2",
              "Path": "terraform/ec2-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-ec2-public-2",
              "Path": "terraform/ec2-public.tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085255ecb032b9374"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_lb_listener.internal-alb",
            "aws_lb_target_group.internal-target-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.alb-public-sg",
            "aws_security_group.public",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_fronted",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:internet-gateway/igw-05300c36bccade228",
            "id": "igw-05300c36bccade228",
            "owner_id": "831187637319",
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/frontend/d07e8ba4c343b365",
            "arn_suffix": "app/frontend/d07e8ba4c343b365",
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-1317019849.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/frontend/d07e8ba4c343b365",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0816c7ed03cab19bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c982b19bbe55b2f3"
              },
              {
                "subnet_id": "subnet-0f0680a2f535474d5"
              }
            ],
            "subnets": [
              "subnet-0c982b19bbe55b2f3",
              "subnet-0f0680a2f535474d5"
            ],
            "vpc_id": "vpc-007667b27f29a6d81",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-public-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/Backend/f02501e442a2f96d",
            "arn_suffix": "app/Backend/f02501e442a2f96d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Backend-1578754862.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/Backend/f02501e442a2f96d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04db6334c8c7ad9d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04294a64e3ec06933"
              },
              {
                "subnet_id": "subnet-0c982b19bbe55b2f3"
              }
            ],
            "subnets": [
              "subnet-04294a64e3ec06933",
              "subnet-0c982b19bbe55b2f3"
            ],
            "vpc_id": "vpc-007667b27f29a6d81",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/frontend/d07e8ba4c343b365/7b25d9a208a09872",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/frontend/d07e8ba4c343b365/7b25d9a208a09872",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/frontend/d07e8ba4c343b365",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.external-targer-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-public-sg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/Backend/f02501e442a2f96d/269396345619e197",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:listener/app/Backend/f02501e442a2f96d/269396345619e197",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:loadbalancer/app/Backend/f02501e442a2f96d",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.internal-alb",
            "aws_lb_target_group.internal-target-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-targer-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7",
            "arn_suffix": "targetgroup/External-Alb-Target-Group/f7b330db668a57f7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "External-Alb-Target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383",
            "arn_suffix": "targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Internal-Alb-Target-Group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7-2023060601421246590000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7",
            "target_id": "i-0a68b031143026f26"
          },
          "dependencies": [
            "aws_instance.ec2-public-1",
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_lb_target_group.external-targer-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.alb-public-sg",
            "aws_security_group.public",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_fronted",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7-2023060601421278310000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/External-Alb-Target-Group/f7b330db668a57f7",
            "target_id": "i-09bbfd33ea83d1b60"
          },
          "dependencies": [
            "aws_instance.ec2-public-2",
            "aws_key_pair.generated_key",
            "aws_lb.internal-alb",
            "aws_lb_listener.internal-alb",
            "aws_lb_target_group.external-targer-group",
            "aws_lb_target_group.internal-target-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.alb-public-sg",
            "aws_security_group.public",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_fronted",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383-20230606014003144000000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383",
            "target_id": "i-0c90c72bd61ab7e03"
          },
          "dependencies": [
            "aws_instance.ec2-private-1",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.internal-target-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.private",
            "aws_subnet.private-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_backend",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383-20230606014003096500000008",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:831187637319:targetgroup/Internal-Alb-Target-Group/53cfb89e31b73383",
            "target_id": "i-0f6ee4c5ce8bcde4c"
          },
          "dependencies": [
            "aws_instance.ec2-private-2",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.internal-target-group",
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_security_group.private",
            "aws_subnet.private-subnet-1",
            "aws_vpc.this",
            "data.template_file.user_data_backend",
            "tls_private_key.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e670f235a47b08e8",
            "association_id": "eipassoc-067700a983ef768fe",
            "connectivity_type": "public",
            "id": "nat-09c63ecdedb7b6939",
            "network_interface_id": "eni-06f695d1b04767a3e",
            "private_ip": "10.0.2.210",
            "public_ip": "54.242.98.87",
            "subnet_id": "subnet-0c982b19bbe55b2f3",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-nat-gateway",
              "Path": "terraform/ntg.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-nat-gateway",
              "Path": "terraform/ntg.tf"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:route-table/rtb-03b5db2cf01c7e94c",
            "id": "rtb-03b5db2cf01c7e94c",
            "owner_id": "831187637319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09c63ecdedb7b6939",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-route_table-private",
              "Path": "terraform/route-table-ntg.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-route_table-private",
              "Path": "terraform/route-table-ntg.tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:route-table/rtb-0330d294c295a15d8",
            "id": "rtb-0330d294c295a15d8",
            "owner_id": "831187637319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05300c36bccade228",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Internet connection"
            },
            "tags_all": {
              "Name": "Internet connection"
            },
            "timeouts": null,
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e791541c3366c083",
            "route_table_id": "rtb-0330d294c295a15d8",
            "subnet_id": "subnet-0c982b19bbe55b2f3"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.route",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0200139758834f01f",
            "route_table_id": "rtb-0330d294c295a15d8",
            "subnet_id": "subnet-0f0680a2f535474d5"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.route",
            "aws_s3_bucket.this",
            "aws_subnet.public-subnet-2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0381b4865934da012",
            "route_table_id": "rtb-03b5db2cf01c7e94c",
            "subnet_id": "subnet-073cbfb0773ddd651"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d773fad99bee6bdd",
            "route_table_id": "rtb-03b5db2cf01c7e94c",
            "subnet_id": "subnet-04294a64e3ec06933"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.this",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet-1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-04db6334c8c7ad9d3",
            "description": "Private Alb Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04db6334c8c7ad9d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "3tier-project-sg-alb-private20230606013924734300000002",
            "name_prefix": "3tier-project-sg-alb-private",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-0816c7ed03cab19bd",
            "description": "Public Alb Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0816c7ed03cab19bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "3tier-project-sg-alb-public20230606013924722800000001",
            "name_prefix": "3tier-project-sg-alb-public",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-037af11aefc0fb1fa",
            "description": "Private Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037af11aefc0fb1fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04db6334c8c7ad9d3"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "3tier-project-sg-private20230606013927650000000003",
            "name_prefix": "3tier-project-sg-private",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-private-sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:security-group/sg-085255ecb032b9374",
            "description": "Public Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085255ecb032b9374",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0816c7ed03cab19bd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "3tier-project-sg-public20230606013927681200000004",
            "name_prefix": "3tier-project-sg-public",
            "owner_id": "831187637319",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_security_group.alb-public-sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-073cbfb0773ddd651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073cbfb0773ddd651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-private-subnet-1",
              "Path": "terraform/subnet-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-private-subnet-1",
              "Path": "terraform/subnet-private.tf"
            },
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-04294a64e3ec06933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04294a64e3ec06933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-private-subnet-2",
              "Path": "terraform/subnet-private.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-private-subnet-2",
              "Path": "terraform/subnet-private.tf"
            },
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-0c982b19bbe55b2f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c982b19bbe55b2f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-public-subnet-1",
              "Path": "terraform/subnet-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-public-subnet-1",
              "Path": "terraform/subnet-public.tf"
            },
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:subnet/subnet-0f0680a2f535474d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0680a2f535474d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831187637319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-public-subnet-2",
              "Path": "terraform/subnet-public.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-public-subnet-2",
              "Path": "terraform/subnet-public.tf"
            },
            "vpc_id": "vpc-007667b27f29a6d81"
          },
          "dependencies": [
            "aws_s3_bucket.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831187637319:vpc/vpc-007667b27f29a6d81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9eb0994787325df",
            "default_route_table_id": "rtb-042efb41c44d9afb3",
            "default_security_group_id": "sg-0745bcafaee850e89",
            "dhcp_options_id": "dopt-0d619b2cc4568acf4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007667b27f29a6d81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042efb41c44d9afb3",
            "owner_id": "831187637319",
            "tags": {
              "Environment": "dev",
              "Name": "3tier-project-vpc",
              "Path": "terraform/vpc.tf"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "3tier-project-vpc",
              "Path": "terraform/vpc.tf"
            }
          },
          "dependencies": [
            "aws_s3_bucket.this"
          ]
        }
      ]
    }
  ]
}